--- a/love/index.html
+++ b/love/index.html
@@ -14,16 +14,16 @@
 <body>
     <div id="drag-container">
         <div id="spin-container">
-            <img src="./images/r1.png" alt="">
-            <img src="./images/r2.png" alt="">
-            <img src="./images/r3.png" alt="">
-            <img src="./images/r4.png" alt="">
-            <img src="./images/r5.jpg" alt="">
-            <img src="./images/r6.png" alt="">
-            <img src="./images/r7.png" alt="">
-            <img src="./images/r8.png" alt="">
-            <img src="./images/r9.png" alt="">
-            <img src="./images/r10.png" alt="">
+            <img src="/images/r1.png" alt="">
+            <img src="/images/r2.png" alt="">
+            <img src="/images/r3.png" alt="">
+            <img src="/images/r4.png" alt="">
+            <img src="/images/r5.jpg" alt="">
+            <img src="/images/r6.png" alt="">
+            <img src="/images/r7.png" alt="">
+            <img src="/images/r8.png" alt="">
+            <img src="/images/r9.png" alt="">
+            <img src="/images/r10.png" alt="">
             <p>Happy Birthday Rashmii</p>
         </div>
         <div id="ground"></div>
